gitops/kustomize/goja-essay/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: goja-essay
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
