gitops/kustomize/goja-essay/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goja-essay
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/name: goja-essay
    app.kubernetes.io/component: web
spec:
  selector:
    app.kubernetes.io/name: goja-essay
    app.kubernetes.io/component: web
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
